http-route.yaml
apiVersion: networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ramya-http-route
  namespace: ramya-namespace
spec:
  parentRefs:
    - name: ramya-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: api/fitness
      filters:
        - type: URLRewrite
          URLRewrite:
            path:
              type: ReplacePrefixMatch
              ReplacePrefixMatch: /fitness
      backendRefs:
        - name: fitness-service
          port: 5000
